[package]
name = "toolbelt"
description = "a collection of simple rust utilities"
version = "0.0.1"
authors = ["trashbyte <github@trashbyte.io>"]
edition = "2018"
repository = "https://github.com/trashbyte/toolbelt"
license = "MIT"
categories = ["development-tools", "game-development"]
keywords = ["tools", "utilities", "utils"]

[dependencies]
cgmath = { version = "0.17.0", features = [ "swizzle" ] }
noise = "0.6.0"
